# SkyFi-MCP

./: .dockerignore  .env.example  .gitignore  AVAILABLE_TOOLS.md  AWS_AMAZON_LINUX_SETUP.md  AWS_SETUP.md  Dockerfile  LICENSE  MIGRATION_GUIDE.md  POLYGON_OPTIMIZATION.md  README.md  REMOTE_SETUP.md  TROUBLESHOOTING.md  aws-setup-http.sh  claude-config-http-local.json  claude-config-http-ngrok.json  claude-config-template.json  claude-desktop-docker-config.json  claude-desktop.example.json  debug_server.py  docker-run-websocket.sh  fly.toml  geospatial_analysis_report.md  http-client-wrapper.py  mcp-config.json  mcp-skyfi-specification.md  minimal-claude-config.json  minimal_server.py  public-server.py  pyproject.toml  remote-mcp.sh  remote-wrapper.py  requirements.txt  run-server.sh  run_server.py  setup-ngrok-http.sh  setup-ngrok.sh  setup-simple-http.sh  setup-websocket-bridge.sh  simple_test.py  (+7 more)
Documentation/: PRD.md
clients/: package.json  skyfi-ws-client.js  skyfi-ws-client.py
config/: .env.example
demos/: README.md  demo_agent.py  demo_agent_web.html  demo_mcp_sdk.py  mcp_chat_demo.py  web_demo.py
deploy/: README.md  aws-cost-protection.md  aws-free-tier.md  oracle-cloud-setup.md  oracle-setup.sh  quick-launch-amazon.sh  quick-launch.sh  setup-server.sh
docs/: AUTHENTICATION.md  AWS_DEPLOYMENT.md  AWS_DEPLOYMENT_GUIDE.md  BUILDING_DEMO_AGENT.md  DEPLOYMENT.md  HEADER_AUTH.md  INTEGRATIONS.md  PRODUCTION_SETUP.md  PUBLIC_SERVER_SETUP.md  QUICK_START_AWS.md  SECURE_AUTH_GUIDE.md  SECURE_AWS_SETUP.md  USER_GUIDE.md
examples/: mcp-transport-wrapper.js  (+3 more)
(+59 files in other folders)
